--- a/AuftragsVerwaltung/css/style.css
+++ b/AuftragsVerwaltung/css/style.css
@@ -1,1 +1,155 @@
 @CHARSET "ISO-8859-1";
+.button{
+	cursor: pointer !important;
+	width:16px;
+}
+.button_big{
+	cursor: pointer !important;
+	border:1px solid black;
+	background-color:#C0C0C0;
+	color:black;
+	padding: 5px;
+	width:140px;
+	height:12px;
+	-webkit-border-radius: 2px;
+	border-radius: 2px; 
+	display:inline-block;
+	vertical-align: middle;
+	line-height:15px;
+	text-align:center;
+	font-weight: normal;
+}
+.button_big:hover {
+	background-color:black;
+	color:#C0C0C0;
+}
+.button_refresh{
+	width:30px;
+	cursor: pointer !important;
+}
+body
+    {
+        left:0px;
+        margin-left:0px;
+        padding-left:0px;
+        margin-right:0px;
+        padding-right:0px;
+        font-family: "Arial";
+    }
+#container
+		{
+		width:100%;
+		margin: 0 auto;
+		height: 100%;
+		}
+		#head
+			{
+			left:0px;
+			height: 159px;
+			margin-bottom:2%;
+			width: 100%;
+			}
+			.head_logo
+			 {
+			 width: 593px;
+			 left:0px;
+             height: 159px;
+			 }
+		#content_main
+			{
+			height:100%;
+			white-space: nowrap;
+			}
+			#navigation
+				{
+				width:150px;
+				margin-left:15px;
+				float:left;
+				border-right: 1px solid #C0C0C0;
+				border-left: 1px solid #C0C0C0;
+				margin-right:10px;
+				}
+				#navigation ul
+					{
+					list-style-type: none;
+					padding: 0;
+					padding-left:10px;
+					margin-left: 0;
+					}
+				#navigation ul li
+					{
+					margin-bottom:10px;
+					}
+				#navigation ul li a
+					{
+					text-decoration: none;
+					color:black;
+					}
+				#navigation ul li a:hover
+					{
+					color:red;
+					}
+			#content
+				{
+				display:inline-block;
+				width:1200px;
+				left:205px;
+				border-left: 1px solid #C0C0C0;
+				float:clear;
+				float:none;
+				overflow:auto !important;
+				padding-left:10px;
+
+				}
+			#footer{
+			position:absolute;
+			right:1px;
+			bottom:1px;
+			color:gray;
+			font-size: x-small;
+			}
+			
+#popup {
+	position:fixed;
+	visibility:visible;
+	opacity:1;
+	left:5%;
+	top:5%;
+	display:inline-block;
+	z-index: 9999;
+	background-color: #FFF;
+	color:black;
+	margin: 0 auto;
+	padding:20px;
+	border:2px solid black;
+	-webkit-border-radius: 10px 0px 10px 10px;
+	border-radius: 10px 0px 10px 10px; 
+}
+#popup h2 {
+	text-indent: 10px;
+}
+#popup * select, #popup * input {
+	width:150px;
+}
+#page-cover { 
+	display:inline-block;
+	visibility:visible;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    opacity: 0.6;
+    -webkit-transition: all 1s ease-in-out;
+	-moz-transition: all 1s ease-in-out;
+	-ms-transition: all 1s ease-in-out;
+	-o-transition: all 1s ease-in-out;
+	transition: all 1s ease-in-out;
+}
+#popup_close {
+	position:absolute;
+	top:-10px;
+	right:-10px;
+}
