--- a/AuftragsVerwaltung/css/style.css
+++ b/AuftragsVerwaltung/css/style.css
@@ -1,10 +1,6 @@
 @CHARSET "ISO-8859-1";
 .button{
 	cursor: pointer !important;
-	width:16px;
-}
-.button_big{
-	cursor: pointer !important;
 	border:1px solid black;
 	background-color:#C0C0C0;
 	color:black;
@@ -19,14 +15,11 @@
 	text-align:center;
 	font-weight: normal;
 }
-.button_big:hover {
+.button:hover {
 	background-color:black;
 	color:#C0C0C0;
 }
-.button_refresh{
-	width:30px;
-	cursor: pointer !important;
-}
+
 body
     {
         left:0px;
@@ -51,9 +44,9 @@ body
 			}
 			.head_logo
 			 {
-			 width: 593px;
+			 width: 100%;
 			 left:0px;
-             height: 159px;
+             height: 150px;
 			 }
 		#content_main
 			{
@@ -62,11 +55,10 @@ body
 			}
 			#navigation
 				{
-				width:150px;
+				width:20%x;
 				margin-left:15px;
 				float:left;
 				border-right: 1px solid #C0C0C0;
-				border-left: 1px solid #C0C0C0;
 				margin-right:10px;
 				}
 				#navigation ul
@@ -91,15 +83,14 @@ body
 					}
 			#content
 				{
-				display:inline-block;
-				width:1200px;
+				display:block;
+				width:70%;
+				height:90%;
 				left:205px;
-				border-left: 1px solid #C0C0C0;
 				float:clear;
 				float:none;
 				overflow:auto !important;
 				padding-left:10px;
-
 				}
 			#footer{
 			position:absolute;
@@ -152,4 +143,27 @@ body
 	position:absolute;
 	top:-10px;
 	right:-10px;
+}
+
+/**
+ * Element is hidden
+ * 
+ * @version 1.0
+ * @since 0.1
+ * @author Dominik Sigmund
+*/
+.hidden {
+	visibility:hidden !important;
+	opacity:0 !important;
+}
+/**
+ * Element has an Error
+ * 
+ * @version 1.0
+ * @since 0.1
+ * @author Dominik Sigmund
+*/
+.error {
+	border:1px solid red;
+	background-color:#FF7256;
 }
