--- a/AuftragsVerwaltung/css/style.css
+++ b/AuftragsVerwaltung/css/style.css
@@ -226,10 +226,9 @@ body
 	border:1px solid black;
 }
 .inactive{
-	background-color: #808080;
-	color:#C0C0C0;
+	background-color: #808080 !important;
+	color:#C0C0C0 !important;
 }
-
 /* Sortable tables */
 table.sortable {
 	border:1px solid black;
